k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # REMOVE CLASSNAME ANNOTATION
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # ADD ANNOTATION
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - multik8s.duckdns.org
      secretName: multik8s-duckdns-org
  ingressClassName: nginx
  # ADD INGRESSCLASSNAME FIELD
  rules:
    - host: multik8s.duckdns.org
      http:
        paths:
          - path: /?(.*)
            # UPDATE PATH
            pathType: ImplementationSpecific
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            # UPDATE PATH
            pathType: ImplementationSpecific
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: server-cluster-ip-service
                port:
                  number: 5000
#    - host: www.multik8s.duckdns.org
#      http:
#        paths:
#          - path: /?(.*)
#            # UPDATE PATH
#            pathType: ImplementationSpecific
#            # ADD PATHTYPE
#            backend:
#              service:
#                # UPDATE SERVICE FIELDS
#                name: client-cluster-ip-service
#                port:
#                  number: 3000
#          - path: /api/?(.*)
#            # UPDATE PATH
#            pathType: ImplementationSpecific
#            # ADD PATHTYPE
#            backend:
#              service:
#                # UPDATE SERVICE FIELDS
#                name: server-cluster-ip-service
#                port:
#                  number: 5000
